[LinOTP] Fixed the blocking overlay in flexigrid beeing misaligned
The overlay that blocks user interaction while the flexigrid gets redrawen
was shifted to the bottom

--- a/linotpd/src/linotp/public/manage/style.css
+++ b/linotpd/src/linotp/public/manage/style.css
@@ -122,11 +122,7 @@ a.close_all {
 	border-bottom: 0;
 }
 
-.flexigrid {
-	padding-top: .8em;
-}
-
-#policy_form {
+.flexigrid, #policy_form {
 	margin-top: .8em;
 }
 
